force-app/main/default/objects/Deal_Event_Manager__mdt/Deal_Event_Manager__mdt.object-meta.xml
<CustomObject>
    <label>Deal Event Manager</label>
    <pluralLabel>Deal Event Manager</pluralLabel>
</CustomObject>