force-app/main/default/objects/Deal_Event_Manager__mdt/fields/Handling_Type__c.field-meta.xml
<CustomField>
    <fullName>Handling_Type__c</fullName>
    <label>Handling Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EB</fullName>
                <default>true</default>
                <label>EB</label>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>