force-app/main/default/objects/Deal_Event_Manager__mdt/fields/IsATPVolumeReduced__c.field-meta.xml
<CustomField>
    <fullName>IsATPVolumeReduced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsATPVolumeReduced</label>
    <type>Checkbox</type>
</CustomField>