force-app/main/default/objects/Deal_Event_Manager__mdt/fields/IsGsapDealCancelOn__c.field-meta.xml
<CustomField>
    <fullName>IsGsapDealCancelOn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGsapDealCancelOn</label>
    <type>Checkbox</type>
</CustomField>