force-app/main/default/objects/Deal_Event_Manager__mdt/fields/IsRetroATPVolumeReduced__c.field-meta.xml
<CustomField>
    <fullName>IsRetroATPVolumeReduced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRetroATPVolumeReduced</label>
    <type>Checkbox</type>
</CustomField>