force-app/main/default/objects/Deal_Event_Manager__mdt/fields/IsRetroGsapDealCancelOn__c.field-meta.xml
<CustomField>
    <fullName>IsRetroGsapDealCancelOn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRetroGsapDealCancelOn</label>
    <type>Checkbox</type>
</CustomField>