force-app/main/default/objects/Deal_Event_Manager__mdt/fields/IsRetroGsapDealCreateOn__c.field-meta.xml
<CustomField>
    <fullName>IsRetroGsapDealCreateOn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRetroGsapDealCreateOn</label>
    <type>Checkbox</type>
</CustomField>