force-app/main/default/objects/Deal_Event_Manager__mdt/fields/IsRetroVolumeHedged__c.field-meta.xml
<CustomField>
    <fullName>IsRetroVolumeHedged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRetroVolumeHedged</label>
    <type>Checkbox</type>
</CustomField>