force-app/main/default/objects/Deal_Event_Manager__mdt/fields/IsVolumeHedged__c.field-meta.xml
<CustomField>
    <fullName>IsVolumeHedged__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsVolumeHedged</label>
    <type>Checkbox</type>
</CustomField>