force-app/main/default/objects/Deal_Event_Manager__mdt/fields/IsZeroPriceDeal__c.field-meta.xml
<CustomField>
    <fullName>IsZeroPriceDeal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsZeroPriceDeal</label>
    <type>Checkbox</type>
</CustomField>