force-app/main/default/objects/Deal_Event_Manager__mdt/fields/PO_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Type__c</fullName>
    <label>PO Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>