force-app/main/default/objects/Deal_Event_Manager__mdt/fields/Pricing_Condition__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Condition__c</fullName>
    <label>Pricing Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>YP03</fullName>
            </value>
            <value>
                <fullName>YP04</fullName>
            </value>
            <value>
                <fullName>YP09</fullName>
            </value>
            <value>
                <fullName>YP10</fullName>
            </value>
            <value>
                <fullName>YP23</fullName>
                <default>true</default>
                <label>YP23</label>
            </value>
            <value>
                <fullName>YP24</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>