force-app/main/default/objects/Deal_Event_Manager__mdt/fields/Pricing_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Indicator__c</fullName>
    <label>Pricing Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <default>true</default>
                <label>F</label>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>