force-app/main/default/objects/Deal_Event_Manager__mdt/fields/Shipping_Condition__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Condition__c</fullName>
    <label>Shipping Condition</label>
    <length>30</length>
    <type>Text</type>
</CustomField>