force-app/main/default/objects/Deal_Event_Manager__mdt/listViews/All_Data.listView-meta.xml
<ListView>
    <fullName>All_Data</fullName>
    <columns>MasterLabel</columns>
    <columns>Active__c</columns>
    <columns>PO_Type__c</columns>
    <columns>Handling_Type__c</columns>
    <columns>Shipping_Condition__c</columns>
    <columns>IsPricingTaxed__c</columns>
    <columns>Pricing_Condition__c</columns>
    <columns>IsZeroPriceDeal__c</columns>
    <columns>IsATPVolumeReduced__c</columns>
    <columns>IsVolumeHedged__c</columns>
    <columns>IsGsapDealCreateOn__c</columns>
    <columns>IsGsapDealCancelOn__c</columns>
    <columns>IsRetroATPVolumeReduced__c</columns>
    <columns>IsRetroVolumeHedged__c</columns>
    <columns>IsRetroGsapDealCreateOn__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Data</label>
    <language>en_US</language>
</ListView>